--- a/SENAC HTML/listas.html
+++ b/SENAC HTML/listas.html
@@ -24,31 +24,24 @@
     <dl>
         <dt>UC 7 - Web</dt>
         <dd>
-            Unidade onde estuda o desenvolvimento web
+            Unidade onde estuda o desenvolvimento web. Usando as tecnologias
+            <ul>
+                <li>HTML5</li>
+                <li>CSS</li>
+                <li>JAVASCRIPT</li>
+                <li>PHP</li>
+                <li>Servidor Apache</li>
+                <li>My SQL</li>
+            </ul>
+        </dd>
+        <dt>UC 6 - Banco de Dados</dt>
+        <dd>
+            Unidade para o aprendizado de SGPD
+            <ul>
+                <li><!--Adicionar uma lista--></li>
+            </ul>
         </dd>
     </dl>
-    <h1>Exercício</h1>
-    <dl>
-        <dt>Luan</dt>
-        <ol>
-            <li>Python</li>
-            <li>P.O.O</li>
-        </ol>
-        <dt>Vitor</dt>
-        <ol>
-            <li>Python</li>
-            <li>WEB</li>
-        </ol>
-    </dl>
-
-    <ol>
-        <li>Luan</li>
-        <dl>
-            <ol>
-                <li>Python</li>
-                <li>P.O.O</li>
-            </ol>
-        </dl>
-    </ol>
+   
 </body>
 </html>
