--- a/html/tabelas.html
+++ b/html/tabelas.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabela</title>
     
+    <style>
+        table, td, th {
+            border: 1px solid;
+            border-color: black;
+        }
+    </style>
+
 </head>
 <body>
     <h1>Exemplo de Tabela</h1>
@@ -66,34 +73,66 @@
         </tbody>
     </table>
 
-    <h1>Grade Horária Escola</h1>
+    <h1>Grupo PI</h1>
     <table>
         <thead>
             <tr>
-                <th>Segunda</th>
-                <th>Terça</th>
-                <th>Quarta</th>
-                <th>Quinta</th>
-                <th>Sexta</th>
-                <th>Horário</th>
+                <th>Nomes</th>
+                <th>E-mails</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <td>UC6: Criar e manter Banco de Dados</td>
-                <td>UC7: Desenvolver aplicações web</td>
-                <td>UC6: Criar e manter Banco de Dados</td>
-                <td>UC7: Desenvolver aplicações web</td>
-                <td>UC6: Criar e manter Banco de Dados</td>
-                <td>18:45 - 19:45</td>
+                <td>Allan</td>
+                <td>allan54099976@aluno.ms.senac.br</td>
             </tr>
             <tr>
-                <td>UC6: Criar e manter Banco de Dados</td>
-                <td>UC7: Desenvolver aplicações web</td>
-                <td>UC6: Criar e manter Banco de Dados</td>
-                <td>UC7: Desenvolver aplicações web</td>
-                <td>UC6: Criar e manter Banco de Dados</td>
-                <td>20:00 - 22:00</td>
+                <td>Ana</td>
+                <td>ana4811726@aluno.ms.senac.br</td>
+            </tr>
+            <tr>
+                <td>Antônio</td>
+                <td>antonio54098946@aluno.ms.senac.br</td>
+            </tr>
+            <tr>
+                <td>Ariel</td>
+                <td>ariel54224616@aluno.ms.senac.br</td>
+            </tr>
+            <tr>
+                <td>Cassia</td>
+                <td>cassia54098046@aluno.ms.senac.br</td>
+            </tr>
+            <tr>
+                <td>Gabrielle</td>
+                <td>gabrielle46147296@aluno.ms.senac.br</td>
+            </tr>
+            <tr>
+                <td>Iann</td>
+                <td>iann54097766@aluno.ms.senac.br</td>
+            </tr>
+            <tr>
+                <td>Luan</td>
+                <td>luan54098746@aluno.ms.senac.br</td>
+            </tr>
+            <tr>
+                <td>Lucas</td>
+                <td>lucas54098306@aluno.ms.senac.br</td>
+            </tr>
+            <tr>
+                <td>Murilo</td>
+                <td>murilo53788556@aluno.ms.senac.br</td>
+            </tr>
+            <tr>
+                <td>Rogério</td>
+                <td>rogerio54177286@aluno.ms.senac.br</td>
+            </tr>
+            <tr>
+                <td>Vitor Galvão</td>
+                <td>vitor54098686@aluno.ms.senac.br</td>
+            </tr>
+            <tr>
+                <td>Vitor Novaga</td>
+                <td>vitor7633136@aluno.ms.senac.br</td>
             </tr>
         </tbody>
     </table>
