--- a/html/receita/receita.html
+++ b/html/receita/receita.html
@@ -9,7 +9,9 @@
 
 </head>
 <body>
-    <h1>Receita de Esfira Fechada</h1>
+    <header>
+        <h1>Receita de Esfira Fechada</h1>
+    </header>
     <img src="esfira fechada.jpeg" alt="Esfira Fechada" width="355,2px" height="227,2px">
     <h2>Ingredientes</h2>
     <h3>Massa</h3>
@@ -30,7 +32,7 @@
     <br>
     <h2>Modo de preparo</h2>
     <h3>Modo de preparo: <b>1h</b></h3>
-        
+            
     <ol>
         <li>Em um refratário coloque a farinha, sal, açúcar, ovo, o óleo.</li>
         <br>
@@ -43,9 +45,9 @@
         <li>Leve para assar em forno médio.</li>
     </ol>
     <br>
-    <div>
+    <footer>
         <h2>Veja Mais Receitas!</h2>
         <a href="https://www.tudogostoso.com.br/">Tudo Gostoso</a>
-    </div>
+    </footer>
 </body>
 </html>
