css meu portifolio

--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Principal</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>UC 7 - Web</h1>
-    <h2>HTML</h2>
+    <br>
+    <h2 class="html">HTML</h2>
         <ol>
             <li>
                 <a href="html/helloworld.html">Hello World</a>
@@ -31,7 +33,7 @@
                 <a href="html/tabelas.html">Tabelas</a>
             </li>
         </ol>
-    <h2>CSS</h1>
+    <h2 class="css">CSS</h2>
         <ol>
             <li>
                 <a href="css/01-hello-css/index.html">Hello CSS</a>
