--- a/css/03-portifolio/index.html
+++ b/css/03-portifolio/index.html
@@ -9,6 +9,8 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@7.4.47/css/materialdesignicons.min.css">
+
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -50,17 +52,17 @@
         </section>
 
         <section>
-            <h1>Contato</h1>
+            <h1>Redes Sociais</h1>
             <p>
                 Entre em contato através das minha redes sociais.
             </p>
             <div>
-                <ul>
+                <ul class="redes-sociais">
                     <li>
-                        <a href="https://github.com/LuanMendesMoura">Git Hub</a>
+                        <a href="https://www.linkedin.com/in/luan-m-26b8342bb/"></a><span class="mdi mdi-linkedin"></span></a>
                     </li>
                     <li>
-                        <a href="https://www.linkedin.com/in/luan-m-26b8342bb/">LinkedIn</a>
+                        <a href="https://github.com/LuanMendesMoura"></a><span class="mdi mdi-github"></span></a>
                     </li>
 
                 </ul>
