--- a/css/03-portifolio/index.html
+++ b/css/03-portifolio/index.html
@@ -31,43 +31,44 @@
                 <div class="card">
                     <h2>Backend</h2>
                     <ul>
-                        <li>Python</li>
+                        <li><a href="https://docs.python.org/pt-br/3.12/" target="_blank">Python</a></li>
                     </ul>
                 </div>
 
                 <div class="card">
                     <h2>Frontend</h2>
                     <ul>
-                        <li>HTML e CSS</li>
+                        <li><a href="https://www.w3schools.com/html/" target="_blank">HTML</a> e
+                        <a href="https://www.w3schools.com/css/" target="_blank">CSS</a></li>
                     </ul>
                 </div>
 
                 <div class="card">
                     <h2>Outros</h2>
                     <ul>
-                        <li>MySQL</li>
+                        <li><a href="https://www.mysql.com/products/workbench/" target="_blank">MySQL</a></li>
                     </ul>
                 </div>
             </div>
         </section>
 
-        <section>
+        <footer>
             <h1>Redes Sociais</h1>
-            <p>
-                Entre em contato através das minha redes sociais.
+            <p style="text-align: center;">
+                Entre em contato através das minhas redes sociais.
             </p>
-            <div>
+            <section>
                 <ul class="redes-sociais">
                     <li>
-                        <a href="https://www.linkedin.com/in/luan-m-26b8342bb/"></a><span class="mdi mdi-linkedin"></span></a>
+                        <a href="https://www.linkedin.com/in/luan-m-26b8342bb/"><span class="mdi mdi-linkedin"></span></a>
                     </li>
                     <li>
-                        <a href="https://github.com/LuanMendesMoura"></a><span class="mdi mdi-github"></span></a>
+                        <a href="https://github.com/LuanMendesMoura"><span class="mdi mdi-github"></span></a>
                     </li>
-
+        
                 </ul>
-            </div>
-        </section>
+            </section>
+        </footer>
     </main>
 </body>
 </html>
