mexendo na minha pagina principal

--- a/index.html
+++ b/index.html
@@ -7,40 +7,72 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>UC 7 - Web</h1>
-    <br>
-    <h2 class="html">HTML</h2>
-        <ol>
-            <li>
-                <a href="html/helloworld.html">Hello World</a>
-            </li>
-            <li>
-                <a href="html/formatacao.html">Formatação</a>
-            </li>
-            <li>
-                <a href="html/listas.html">Listas</a>
-            </li>
-            <li>
-                <a href="html/link.html">Link</a>
-            </li>
-            <li>
-                <a href="html/imagen.html">Imagem</a>
-            </li>
-            <li>
-                <a href="html/receita/receita.html">Receitas</a>
-            </li>
-            <li>
-                <a href="html/tabelas.html">Tabelas</a>
-            </li>
-        </ol>
-    <h2 class="css">CSS</h2>
-        <ol>
-            <li>
-                <a href="css/01-hello-css/index.html">Hello CSS</a>
-            </li>
-            <li>
-                <a href="css/03-portifolio/index.html">Portifólio</a>
-            </li>
-        </ol>
+    <header>
+        <nav>
+            <a class="logo" href="#">Logo</a>
+            <ul>
+                <li>
+                    <a href="#">Home</a>
+                </li>
+                <li>
+                    <a href="#">Sobre</a>
+                </li>
+                <li>
+                    <a href="#">Loja</a>
+                </li>
+                <li>
+                    <a href="#">Contato</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <h1>UC 7 - Web</h1>
+        <br>
+        <section>
+                <h2 class="html">HTML</h2>
+                <ol>
+                    <li>
+                        <a href="html/helloworld.html">Hello World</a>
+                    </li>
+                    <li>
+                        <a href="html/formatacao.html">Formatação</a>
+                    </li>
+                    <li>
+                        <a href="html/listas.html">Listas</a>
+                    </li>
+                    <li>
+                        <a href="html/link.html">Link</a>
+                    </li>
+                    <li>
+                        <a href="html/imagen.html">Imagem</a>
+                    </li>
+                    <li>
+                        <a href="html/receita/receita.html">Receitas</a>
+                    </li>
+                    <li>
+                        <a href="html/tabelas.html">Tabelas</a>
+                    </li>
+                </ol>
+            </section>
+            
+            <section>
+                <h2 class="css">CSS</h2>
+                <ol>
+                    <li>
+                        <a href="css/01-hello-css/index.html">Hello CSS</a>
+                    </li>
+                    <li>
+                        <a href="css/03-portifolio/index.html">Portifólio</a>
+                    </li>
+                    <li>
+                        <a href="cards/index.html">Cards</a>
+                    </li>
+                    <li>
+                        <a href="navbar/index.html">NavBar</a>
+                    </li>
+                </ol>
+            </section>
+    </main>
 </body>
 </html>
