--- a/javaScript/lista01/ex01/index.html
+++ b/javaScript/lista01/ex01/index.html
@@ -13,58 +13,60 @@
             <form class="form" action="">
 
                 <div class="form-headear">
-                    <h4>Adição de dois números</h4>
+                    <h4>Soma</h4>
                 </div>
-
-                <div id="ex01/ex02">
-                    <label for="num01">Num1</label>
-                    <input type="number" step="0.1" name="num01">
-
-                    <label for="num02">Num2</label>
-                    <input type="number" step="0.1" name="num02">
+                
+                <div id="ex01">
+                        <label for="num01">NÚMERO 1</label>
+                        <input id="n1" type="number" step="0.1" name="num01">
+                        <label for="num02">NÚMERO 2</label>
+                        <input id="n2" type="number" step="0.1" name="num02">
+                </div>
 
                 <div class="button">
                     <button type="button" onclick="somar()">SOMAR</button>
                     <button type="button" onclick="subtrair()">SUBTRAIR</button>
+                    <button type="button" onclick="multiplicar()">MULTIPLICAR</button>
+                    <button type="button" onclick="dividir()">DIVIDIR</button>
                 </div>
 
             </form>
 
-            <p class="somaInput">
+            <p class="resultado">
             </p>
         </section>
     </main>
 
     <script>
         function somar() {
-            const input01 = parseInt(document.querySelector('#ex01/ex02').querySelector('[name="num01"]').value) 
+            const n1 = parseInt(document.querySelector('#ex01')
+            .querySelector('[name="num01"]').value) 
 
-            const input02 = parseInt(document.querySelector('#ex01/ex02').querySelector('[name="num02"]').value)
+            const n2 = parseInt(document.querySelector('#ex01')
+            .querySelector('[name="num02"]').value)
 
-            const soma = input01 + input02
-
-            const resultado = document.querySelector('.somaInput')
-
-            resultado.innerHTML = soma
+            const resultado = document.querySelector('.resultado')
+            resultado.innerHTML = n1 + n2
         }
 
-        function subtrair() {
-            const input01 = document
-                .querySelector('#ex01/ex02')
-                .querySelector('[name="num01"]')
+        // function subtrair() {
+        //     const input01 = document
+        //         .querySelector('#ex01')
+        //         .querySelector('[name="num01"]')
 
-            const input02 = document
-                .querySelector('#ex01/ex02')
-                .querySelector('[name="num02"]')
+        //     const input02 = document
+        //         .querySelector('#ex01')
+        //         .querySelector('[name="num02"]')
 
-            const n1 = Number(input01.value)
-            const n2 = Number(input02.value)
+        //     const n1 = Number(input01.value)
+        //     const n2 = Number(input02.value)
 
-            const resultadoInput = document
-                .querySelector('#ex01/ex02')
-                .querySelector('[name="result"]')
-            resultadoInput.value = n1-n2
-        }
+        //     const resultadoInput = document
+        //         .querySelector('#ex01')
+        //         .querySelector('[name="result"]')
+        //     resultadoInput.value = n1-n2
+        // }
+
     </script>
 </body>
 </html>
