--- a/exercicios 22-10-2024/ex01/index.html
+++ b/exercicios 22-10-2024/ex01/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ex02</title>
+    <title>ex01 - Luan Mendes Moura</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -16,13 +16,13 @@
                 </div>
                 
                 <span></span>
-                
+                <br><br>
                 <div class="form-input">
                     <input id="n1" type="number" step="1" name="input01" placeholder="Número*">
 
                     <input id="n2" type="number" step="1" name="input02" placeholder="Número*">
                 </div>
-
+                <br>
                 <div class="form-button">
                     <button type="button" onclick="adicao()">+</button>
 
